trying to fix header scrolling offscreen

--- a/public/css/cocktail-home-style.css
+++ b/public/css/cocktail-home-style.css
@@ -77,14 +77,19 @@ div.hero-text>p {
     transform: scale(1.2);
 }
 
-.image-gallery {
+.gallery-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.columns-container {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
     padding: 1%;
     width: 100%;
     box-sizing: border-box;
-    /* justify-content: space-around; */
 }
 
 .column {
@@ -151,8 +156,8 @@ div.hero-text>p {
         display: flex;
         position: sticky;
         top: 0;
-        width: 100%;
-        justify-content: center;
+        justify-content: space-evenly;
+        /* width: 100%; */
         padding: 0.5em;
         z-index: 999;
     }
@@ -164,14 +169,6 @@ div.hero-text>p {
         font-size: 1.25em;
         border-radius: 50%;
         padding: 0.5em;
-    }
-
-    .gallery-controls button#tile-view-button {
-        margin-right: 2em;
-    }
-
-    .gallery-controls button#timeline-view-button {
-        margin-left: 2em;
     }
 
     .gallery-controls button.active {
@@ -191,24 +188,24 @@ div.hero-text>p {
         opacity: 1;
     }
 
-    .image-gallery.tile-view {
+    .gallery-container.tile-view {
         gap: 0px;
     }
 
-    .image-gallery.tile-view .column {
-        flex: 1 0 calc(33.33%);
+    .gallery-container.tile-view .column {
+        flex: 1 0 30vw;
         align-items: center;
     }
 
-    .image-gallery.tile-view .overlay {
+    .gallery-container.tile-view .overlay {
         transition: 0s;
     }
 
-    .image-gallery.tile-view .overlay.visible {
+    .gallery-container.tile-view .overlay.visible {
         opacity: 0;
     }
 
-    .image-gallery.tile-view .image-item {
+    .gallery-container.tile-view .image-item {
         width: 30vw;
         height: 30vw;
     }
